# Calculator

./: CMakeLists.txt  base.h  colour.h  constants.h  customFunctions.h  doubleTools.h  featuresLeft.txt  featuresNext.txt  graph.h  graphLinux.h  graphSolver.h  graphWin.h  help.h  inputFlags.h  lexer.h  main.c  readme.md  solver.h  terminal.h  tokenArrayTools.h  windowIcon.h
Windows/: resource.h  resource.rc
